RESOLVED FIXED78419
Old 32_64 JIT should assert that its use of map() is consistent with the DFG OSR exit's expectations
https://bugs.webkit.org/show_bug.cgi?id=78419
Summary Old 32_64 JIT should assert that its use of map() is consistent with the DFG ...
Filip Pizlo
Reported 2012-02-11 12:22:38 PST
Patch forthcoming.
Attachments
the patch (1.27 KB, patch)
2012-02-11 12:25 PST, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2012-02-11 12:22:57 PST
Filip Pizlo
Comment 2 2012-02-11 12:25:19 PST
Created attachment 126641 [details] the patch
Filip Pizlo
Comment 3 2012-02-11 17:26:49 PST
Note You need to log in before you can comment on or make changes to this bug.