Old 32_64 JIT should assert that its use of map() is consistent with the DFG OSR exit's expectations https://bugs.webkit.org/show_bug.cgi?id=78419 <rdar://problem/10817121>

Reviewed by Oliver Hunt.

* jit/JITInlineMethods.h:
(JSC::JIT::map):



Canonical link: https://commits.webkit.org/95356@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107494 268f45cc-cd09-0410-ab3c-d52691b4dbfc